# SignalPath

./: .gitignore  .releaserc.json  CHANGELOG.md  NewRoadmap.md  PROJECT_STATUS_REPORT.md  README.md  SignalPath.sln  angular.json  electron.vite.config.ts  index.html  package-lock.json  package.json  roadmap.md  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release.yml
docs/: CICD_SETUP.md  GITHUB_SETUP.md  README_CICD.md
electron/: main.ts  preload.ts
src/: App.tsx  MainLayout.razor  Program.cs  _Imports.razor
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/Models/: ComponentModel.cs  NetModel.cs  SchematicModel.cs
src/Pages/: Canvas.razor  ComponentPalette.razor  Home.razor  PropertiesPanel.razor
src/Properties/: launchSettings.json
src/Services/: CanvasInterop.cs  ComponentLibrary.cs  DragDropService.cs  IDragDropService.cs  SchematicState.cs
src/app/: app.component.css  app.component.html  app.component.ts  component-library.ts  state.service.ts
src/app/canvas/: canvas.component.css  canvas.component.html  canvas.component.ts
src/app/component-palette/: component-palette.component.css  component-palette.component.html  component-palette.component.spec.ts  component-palette.component.ts
src/app/types/: fabric-extended.d.ts
src/components/: Canvas.tsx  ComponentPalette.tsx  Grid.tsx  PropertiesPanel.tsx  SchematicComponent.tsx  Toolbar.tsx  index.ts
src/lib/: componentLibrary.ts  pathfinding.ts
src/store/: schematicStore.ts
src/wwwroot/: index.html
(+7 files in other folders)
